...
            android:layout_height="wrap_content"
            android:paddingBottom="20dp"
            android:text="@string/your_answer"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/myTextBox"
            android:layout_width="fill_parent"
            android:layout_height="390dp"
            android:ems="10"
            android:gravity="top|left"
            android:inputType="textMultiLine"
            android:lines="5"
...
